--- a/index.html
+++ b/index.html
@@ -36,15 +36,9 @@
               </ul>
             </div>
             <div class="layout layout--halves">
-              <div class="module">
-                <label>Server Address</label>
                 <!-- server ip value - change after testing  -->
-                <input id="peer-id" type="text" onclick="this.select();" value="40.83.179.150">
-              </div>
-              <div class="module">
-                <label>Server Port</label>
-                <input id="peer-key" type="text" onclick="this.select();" value="8888">
-              </div>
+                <input id="peer-id" type="hidden" onclick="this.select();" value="peercc-server.ortclib.org">
+                <input id="peer-key" type="hidden" onclick="this.select();" value="8888">
             </div>
             <input id="call_btn" class="button button--primary button--page-primary" type="button" value="Call" disabled>
             <input id="connect_btn" class="button button--primary button--page-primary" type="button" value="Connect">
@@ -70,19 +64,5 @@
     </div>
   </section>
 
-  <!-- ALERT BOX -->
-  <div id="disabler" class="modal">
-    <div id="alert-box" class="modal-dialog" tabindex="-1">
-      <header id="alert-header" class="modal__header">
-        <h1 id="modal-title" class="subtitle">Alert</h1>
-      </header>
-      <div id="modal-body" class="modal__body">
-        <p id="message"></p>
-      </div>
-      <div class="modal__footer">
-        <button id="alert-ok-btn">Okay</button>
-      </div>
-    </div>
-  </div>
 </body>
 </html>
