--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -36,6 +36,8 @@
                 <p id="name"></p>
               </div>
               <form action="" id="changeName" onsubmit="changeName()">
+                
+                <label for="toggleTrickleIce"><input type="checkbox" id="toggleTrickleIce" checked>  Trickle ICE</label>
                 <h3>Change name: </h3>
                 <input type="text" id = "changeValue">
                 <input type="submit" value="Change" class="button button--primary button--page-primary"> 
@@ -48,7 +50,7 @@
             </div>
             <div class="layout layout--halves">
                 <!-- server ip value - change after testing  -->
-                <input id="peer-id" type="hidden" onclick="this.select();" value="peercc-server.ortclib.org"> <!-- peercc-server.ortclib.org -->
+                <input id="peer-id" type="hidden" onclick="this.select();" value="peercc-server.ortclib.org"> 
                 <input id="peer-key" type="hidden" onclick="this.select();" value="8888">
             </div>
             <input id="call_btn" class="button button--primary button--page-primary" type="button" value="Call" disabled>
