--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
               </ul>
             </div>
             <div class="layout layout--halves">
-                <!-- server ip value - change after testing  -->
+                <!-- server ip value  -->
                 <input id="peer-id" type="hidden" onclick="this.select();" value="peercc-server.ortclib.org"> 
+                <!-- server port value  -->
                 <input id="peer-key" type="hidden" onclick="this.select();" value="8888">
             </div>
             <input id="call_btn" class="button button--primary button--page-primary" type="button" value="Call" disabled>
