resolution changed, cleaned...

--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
           </section>
           <section class="connect-form">
             <div class="layout layout--halves">
-              <div id="showName">
-                <h3>Your name: </h3>
-                <p id="name"></p>
-
+              <select id="resolution">
+                <option value="320x180">320 x 180</option>
+                <option value="320x240">320 x 240</option>
+                <option value="424x240">424 x 240</option>
+                <option value="640x360">640 x 360</option>
+                <option value="640x480" selected >640 x 480</option>
+                <option value="848x480">848 x 480</option>
+                <option value="960x540">960 x 540</option>
+                <option value="1280x720">1280 x 720</option>
+              </select>
+              <div id="stateChange">
                 <input type="checkbox" name="mute" id="mute">
                 <label for="mute" class="mute">
                   <i class="fas fa-microphone" id="mute_icon"></i>
@@ -44,6 +51,10 @@
                 <label for="muteVideo" class="muteVideo">
                   <i class="fas fa-video" id="muteVideo_icon"></i>
                 </label>
+              </div>
+              <div id="showName">
+                <h3>Your name: </h3>
+                <p id="name"></p>
               </div>
               <form action="" id="changeName" onsubmit="changeName()">
                 
