technology select option added for dual support

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
           
         </form>
         <br><br>
+        <div id="selectTechWrap">
+          <b>Select technology:</b>
+          ORTC   <input type="radio" name="selectTech" id="ORTC_selected" value="ORTC" checked>
+          WebRTC <input type="radio" name="selectTech" id="WebRTC_selected" value="WebRTC">
+        </div>
+        <br><br>
         
         <section id="footer">
           <div id="status">
